--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ anyio = "^4.3.0"
 uvicorn = "^0.29.0"
 
 
+[tool.poetry.group.dev.dependencies]
+fastapi = "^0.111.0"
+litestar = "^2.9.1"
+pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
